# kmmlu

./: Dockerfile  README.md  batchinput.jsonl  batchoutput.jsonl  benchmark_result.txt  docker-compose.yml  main.py  output.jsonl  pyproject.toml
embedding/: batch_형소법_cache.pkl
